feat: kakao map 연동

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="플레이스 루틴" />
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4a7af0f8a2160e0a7c5f33a99bf14457"
+    ></script>
     <title>플레이스 루틴</title>
   </head>
   <body>
